--- a/Algoritmy na mrizich/prednasky/01_prednaska.tex
+++ b/Algoritmy na mrizich/prednasky/01_prednaska.tex
@@ -54,3 +54,7 @@ $\Leftarrow$ vezmi $\varepsilon>0$ tak, aby platila pravá strana tvrzení. Zvol
 
 Celkem tedy $G\cap \{v\in\Real^n|\|v-g\|<\varepsilon\}=\{g\}$.
 \end{proof}
+
+\begin{consequence}
+Nechť $G\subseteq(\Real^n,+)$ je diskrétní, $M \in \mathbb{R}^+$. Pak $\{g \in G\ |\ \|g\| < r}$ je konečná.
+\end{consequence}
