--- a/Algoritmy na mrizich/prednasky/02_prednaska.tex
+++ b/Algoritmy na mrizich/prednasky/02_prednaska.tex
@@ -134,7 +134,7 @@ Jednoznačnost: $\varphi(u)=A\cdot u\implies \varphi(e_i)=A e_i\implies \varphi(
 \end{proof}
 
 \subsection{Souřadnice}
-$G$ konečně generovaná volná komutativní grupa. $B = \{b_1, \dots, b_d\}$ volná báze $G$.
+Nechť $G$ je konečně generovaná volná komutativní grupa a $B = \{b_1, \dots, b_d\}$ je volná báze $G$.
 
 Pro $g \in G$ je $[g]_B = \begin{pmatrix}
 z_1 \\
