--- a/Algoritmy na mrizich/main.tex
+++ b/Algoritmy na mrizich/main.tex
@@ -171,6 +171,7 @@
 \DeclareMathOperator{\GL}{GL}
 \DeclareMathOperator{\adj}{adj}
 \DeclareMathOperator{\diag}{diag}
+\DeclareMathOperator{\PrimesSet}{P}
 
 \theoremstyle{plain}% default
 \newtheorem{theorem}{Věta}[section]
@@ -200,7 +201,7 @@
 
 \title{\textbf{\Huge Algoritmy na mřížích}}
 \subtitle{Pavel Příhoda}
-\date{24. října 2021}
+\date{1. prosince 2021}
 \author{\vspace{-10mm}}
 %\date{} % Toggle commenting to test
 
@@ -224,6 +225,7 @@
 \subfile{prednasky/06_prednaska}
 \subfile{prednasky/07_prednaska}
 \subfile{prednasky/08_prednaska}
+\subfile{prednasky/09_prednaska}
 \subfile{prednasky/10_prednaska}
 \subfile{prednasky/11_prednaska}
 
